tests/negative/lexer/octal_digit.orng
// octal_digit.orng:6:8: error: 'X' is not a valid octal digit
//     0oXYZ
//       ^
// 
fn main() -> Int {
    0oXYZ
}